--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -37,7 +37,7 @@
         <h2 class="text-center">La búsqueda no arrojó resultados...</h2>
         {% else %} {% for img in images %}
         <div class="col">
-            <div class="card mb-3 ms-5" style="max-width: 540px;">
+            <div class="card mb-3 ms-5 {% if img.status == 'Alive' %}alive{% elif img.status == 'Dead' %}dead{% else %}unknown{% endif %}" style="max-width: 540px;">
                 <div class="row g-0">
                     <div class="col-md-4">
                         <img src="{{ img.url }}" class="card-img-top" alt="imagen">
@@ -48,11 +48,11 @@
                             <h3 class="card-title">{{ img.name }}</h3>
                             <p class="card-text">
                                 <strong>
-                                            {% if true == 'Alive' %} 🟢 {{ img.status }} 
-                                            {% elif true == 'Dead' %} 🔴 {{ img.status }} 
-                                            {% else %} 🟠 {{ img.status }} 
-                                            {% endif %}
-                                        </strong>
+                                    {% if img.status == 'Alive' %} 🟢 {{ img.status }} 
+                                    {% elif img.status == 'Dead' %} 🔴 {{ img.status }} 
+                                    {% else %} 🟠 {{ img.status }} 
+                                    {% endif %}
+                                </strong>
                             </p>
                             <p class="card-text"><small class="text-body-secondary">Última ubicación: {{ img.last_location }}</small></p>
                             <p class="card-text"><small class="text-body-secondary">Episodio inicial: {{ img.first_seen }}</small></p>
